# infi-erp-v2

./: .env  Cargo.toml  db_class_diagram.drawio  docker-compose.yml  enter-db.sh  relations_v3_(wip).drawio  start-dev-db.sh
core/production-resolver/: Cargo.toml
core/production-resolver/src/: main.rs  resolver.rs
core/production-resolver/src/resolver/: config.rs  mod.rs  time.rs
core/udp-listener/: Cargo.toml
core/udp-listener/src/: main.rs
db-api/: Cargo.toml  relations.txt
db-api/.sqlx/: query-5e1cda8f8948dd0038f857c9d4abb987e7ec50c5d0d473f6e3ff64f33e598be3.json  query-5e7c27f190a78651814eb730d006cf4f529066e3fdcd148469bd7d31a86f21ec.json  query-830911d7d6d3e48703ab875bceb242618e3e7752a4c2a0b22bc2125108c8e9ab.json  query-845df43613039d0a7d1e895ac8e880bcfebf68f39516da1c19e6f6d8b4cb6f2e.json  query-c0058e6c7e6476c407ae24b63eef605d5a58bf2604f6f4b6d87d37337fe5c99e.json  query-e11008b0cd6573d9038eb4bea889b51acd39cb5133c0f2efa282151985113f8e.json
db-api/migrations/: 003_t_orders.sql  004_pieces.sql  004_v_order_details.sql  006_items.sql  008_t_inventory.sql  009_machine_tools.sql  009_t_transformations.sql  010_t_bom.sql  011_t_production.sql  012_suppliers.sql  clients.sql  orders.sql
db-api/src/: bom.rs  lib.rs  orders.rs  production.rs
