[workspace]
resolver = "2"
members = ["core/udp-listener", "db-api"]

[workspace.dependencies]
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.4"
tracing-subscriber = "0.3.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
dotenv = "0.15.0"
